name:                hask-scheme
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/hgiesel/hask-scheme#readme
license:             BSD3
license-file:        LICENSE
author:              Author name Henrik Giesel
maintainer:          hengiesel@gmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Parser
                     , SchemeVal
                     , Eval
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , containers
  default-language:    Haskell2010

executable hscheme
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hask-scheme
  default-language:    Haskell2010

test-suite hask-scheme-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hask-scheme
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hgiesel/hask-scheme.git
